# FRAME

./: .gitattributes  .gitignore  README.md  cat_maps.py  dataset.py  dataset_check.py  forward_check.py  frame_encoder.py  inference.py  inspect_window.py  model.py  pyproject.toml  sanity_check.py  train.py  weight_check.py
data/: battlefield_cptfalcon_vs_falco_unknown_40830b5c-p1.parquet  battlefield_cptfalcon_vs_falco_unknown_40830b5c-p2-parquet  battlefield_falco_vs_fox_unknown_72d9118c-p1.parquet  battlefield_falco_vs_fox_unknown_72d9118c-p2-parquet  final_destination_falco_vs_falco_2025_06_18t221656z_e33948e0-p1.parquet  final_destination_falco_vs_falco_2025_06_18t221757z_cb47ea35-p1.parquet  final_destination_falco_vs_falco_2025_06_18t221857z_5999e795-p1.parquet  final_destination_falco_vs_falco_2025_06_19t180951z_1c823a68-p1.parquet  final_destination_falco_vs_falco_2025_06_19t181055z_b04f99ee-p1.parquet  final_destination_falco_vs_falco_2025_06_19t181151z_e8723cb1-p1.parquet  final_destination_falco_vs_falco_2025_06_19t181252z_0c9dfcaa-p1.parquet  final_destination_falco_vs_falco_2025_06_19t181833z_2046bf61-p1.parquet  final_destination_falco_vs_falco_2025_06_19t182237z_f17eba1c-p1.parquet  final_destination_falco_vs_falco_2025_06_19t182338z_d9614d9c-p1.parquet  final_destination_falco_vs_falco_2025_06_19t182432z_4b1996b3-p1.parquet  final_destination_falco_vs_falco_2025_06_19t182527z_db7220c0-p1.parquet  pokemon_stadium_falco_vs_falco_2025_06_08t201457z_bb1b7b43-p1.parquet  pokemon_stadium_falco_vs_falco_2025_06_08t201752z_a0dd71a1-p1.parquet  (+5 more)
