[tool.poetry]
name = "frame"
version = "0.1.0"
description = "FRAME: Fixed-step Realtime Action Matrix Estimator"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
melee = "*"
typing-extensions = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
